# mixbridge

./: CMakeLists.txt  README.md
.github/workflows/: windows-vst3-build.yml
Plugin/CMake/: MixBridge.entitlements
Plugin/Source/Core/: MixBridgeProcessor.cpp  MixBridgeProcessor.h
Plugin/Source/Discovery/: BonjourDiscovery.h
Plugin/Source/Network/: NetworkStreamer.h  UDPSocket.h
Plugin/Source/UI/: MixBridgeEditor.cpp  MixBridgeEditor.h
Shared/Common/: HighResClock.h  NetworkStats.h
Shared/Protocol/: MixBridgeProtocol.h
Shared/RingBuffer/: LockFreeRingBuffer.h
Tests/Shared/: MixBridgeTests.cpp
iOS/: project.yml
iOS/MixBridge.xcodeproj/: project.pbxproj
iOS/MixBridge.xcodeproj/project.xcworkspace/xcuserdata/barakscharovsky.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/MixBridge.xcodeproj/xcuserdata/barakscharovsky.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/MixBridge/Resources/: Info.plist  XcodeProjectNotes.swift
iOS/MixBridge/Sources/Audio/: AudioEngine.swift  JitterBuffer.swift
iOS/MixBridge/Sources/Discovery/: BonjourBrowser.swift
iOS/MixBridge/Sources/Network/: MixBridgeNetworkHelpers.swift  SessionManager.swift  UDPReceiver.swift
iOS/MixBridge/Sources/UI/: MainView.swift  MixBridgeApp.swift
